[tool.poetry]
name = "cron-parser"
version = "0.1.0"
description = ""
authors = ["Maciej Jaworski <maciej@jaworski.co>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"
pyinvoke = "^1.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | snapshots
)/
'''
